Added private board; created view for adding single note to board; created NoteViewModels and PrivateNoteViewModel inside

--- a/NoteBoard/Content/myBootstrapModifications.css
+++ b/NoteBoard/Content/myBootstrapModifications.css
@@ -88,3 +88,13 @@ text-val-error {
     padding: 0;
     text-decoration: underline;
 }
+
+.card.add-note {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.btn.add-note {
+    max-width: 10rem;
+    float: right;
+}
