--- a/NoteBoard/Views/Board/Create.cshtml
+++ b/NoteBoard/Views/Board/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model NoteBoard.Models.MainBoard
+﻿@model NoteBoard.Models.Board
 
 @{
     ViewBag.Title = "Create";
@@ -13,7 +13,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>MainBoard</h4>
+        <h4>Board</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
