--- a/NoteBoard/Views/Board/Delete.cshtml
+++ b/NoteBoard/Views/Board/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model NoteBoard.Models.MainBoard
+﻿@model NoteBoard.Models.Board
 
 @{
     ViewBag.Title = "Delete";
@@ -9,7 +9,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>MainBoard</h4>
+    <h4>Board</h4>
     <hr />
     <dl class="dl-horizontal">
     </dl>
