--- a/NoteBoard/Views/Shared/_Layout.cshtml
+++ b/NoteBoard/Views/Shared/_Layout.cshtml
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
+    <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
